# valve_source_plugin_navmesh

./: CMakeLists.txt  README.md  VSPlugin.cpp  nav.cpp  nav.h  nav_area.cpp  nav_area.h  nav_colors.cpp  nav_colors.h  nav_edit.cpp  nav_entities.cpp  nav_entities.h  nav_file.cpp  nav_generate.cpp  nav_ladder.cpp  nav_ladder.h  nav_merge.cpp  nav_mesh.cpp  nav_mesh.h  nav_node.cpp  nav_node.h  nav_pathfind.h  nav_simplify.cpp
.github/workflows/: cmake.yml  create-release.yml
nav_mesh/: CMakeLists.txt  CountDownTimer.h  nav.h  nav_area.cpp  nav_area.h  nav_colors.cpp  nav_edit.cpp  nav_entities.cpp  nav_entities.h  nav_file.cpp  nav_generate.cpp  nav_ladder.cpp  nav_ladder.h  nav_merge.cpp  nav_mesh.cpp  nav_mesh.h  nav_node.cpp  nav_pathfind.h  nav_simplify.cpp
test/: CMakeLists.txt  VSPlugin.cpp  VSPlugin.h
util/: BaseCombatWeapon.cpp  BaseCombatWeapon.h  BaseEntity.cpp  BaseEntity.h  BasePlayer.h  CMakeLists.txt  EntityClass.cpp  EntityClass.h  EntityClassManager.cpp  EntityClassManager.h  EntityInstance.cpp  EntityInstance.h  EntityUtils.cpp  EntityUtils.h  EntityVar.cpp  EntityVar.h  Exception.h  Handle.h  UtilTrace.cpp  UtilTrace.h  common_util.cpp  common_util.h
